# datuplet

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  datuplet-app-0.1.3.tgz  datuplet-app-0.1.4.tgz  datuplet-app-0.1.5.tgz  datuplet-app-0.1.6.tgz  datuplet-app-0.1.7.tgz  datuplet-app-0.10.1.tgz  datuplet-app-0.10.2.tgz  datuplet-app-0.11.0.tgz  datuplet-app-0.2.0.tgz  datuplet-app-0.2.1.tgz  datuplet-app-0.2.2.tgz  datuplet-app-0.2.3.tgz  datuplet-app-0.2.4.tgz  datuplet-app-0.2.5.tgz  datuplet-app-0.2.6.tgz  datuplet-app-0.2.7.tgz  datuplet-app-0.2.8.tgz  datuplet-app-0.3.0.tgz  datuplet-app-0.3.1.tgz  datuplet-app-0.4.0.tgz  datuplet-app-0.4.1.tgz  datuplet-app-0.5.0.tgz  datuplet-app-0.5.1.tgz  datuplet-app-0.6.0.tgz  datuplet-app-0.7.1.tgz  datuplet-app-0.8.0.tgz  datuplet-app-0.9.1.tgz  datuplet-infra-0.1.3.tgz  datuplet-infra-0.1.4.tgz  datuplet-infra-0.1.5.tgz  datuplet-infra-0.1.6.tgz  datuplet-infra-0.1.7.tgz  datuplet-infra-0.10.1.tgz  (+79 more)
docs/: ad-hoc-query.md  agent-quickstart.md  architecture.md  auth-flow.md  components.md  dependency-upgrades.md  fga-model-upgrades.md  install.md  known-limitations.md  pipeline-api.md  postgres-migrations.md  quickstart-gke.md  (+4 more)
sdk/python/: __init__.py  client.py  pyproject.toml  status.py  test_writer_batching.py
sdk/python-sandbox/: pyproject.toml  test_local.py
sdk/python-sandbox/datuplet_sandbox/: __init__.py  bootstrap.py  client.py
sdk/python-sandbox/tests/: test_bootstrap.py  test_client.py
sdk/python/gateway/v2/: gateway_pb2.py  gateway_pb2.pyi  gateway_pb2_grpc.py
(+752 files in other folders)
