[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datuplet-sdk"
version = "0.1.0"
description = "Thin Python SDK for Datuplet components"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.50.0",
    "protobuf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "grpcio-tools>=1.50.0",
]
